vulnapp/vulnerableapp-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vulnapp
  labels:
    name: vulnapp
  annotations:
    argocd.argoproj.io/sync-wave: "1"
