vulnapp/vulnerableapp-facade-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\SOC\git\Kompose\kompose-windows-amd64.exe --file .\sasanlabs-vulnapp.yml convert
    kompose.version: 1.34.0 (cbf2835db)
    argocd.argoproj.io/sync-wave: "2"
  labels:
    io.kompose.service: vulnerableapp-facade
  name: vulnerableapp-facade
  namespace: vulnapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vulnerableapp-facade
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\SOC\git\Kompose\kompose-windows-amd64.exe --file .\sasanlabs-vulnapp.yml convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: vulnerableapp-facade
    spec:
      containers:
        - env:
            - name: NGINX_HOST
              value: vuln.local.lan
            - name: NGINX_PORT
              value: "80"
          image: sasanlabs/owasp-vulnerableapp-facade:unreleased
          name: vulnerableapp-facade
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
